# gemuPG

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  addons.make  area.cpp  area.h  block.h  gemupg.sln  gemupg.vcxproj  gemupg.vcxproj.filters  grid.cpp  interface.cpp  interface.h
.github/workflows/: cmake-multi-platform.yml  gitlab-sync.yml  tagged-release.yml
assets/: convert.sh
examples/other/: happy.gemupg  loop inversion.gemupg  paulhatsimkopf.gemupg  ryojiikeda.gemupg  theduck.gemupg  warhol.gemupg
examples/poster/: adam-pietruszko.gemupg  first.gemupg  new.gemupg  poly!.gemupg  robin-koek.gemupg  slow.gemupg
examples/thesis/: example01.gemupg  example02.gemupg  example03.gemupg  example04.gemupg
include/imgui/: imgui_impl_sdlrenderer3.cpp
sounds/: sources.txt
src/: area.cpp  area.h  audio.cpp  audio.h  block.cpp  block.h  blockfactory.h  camera.cpp  camera.h  clock.cpp  clock.h  command.cpp  command.h  grid.cpp  grid.h  gui.cpp  gui.h  input.cpp  input.h  interface.cpp  interface.h  main.cpp  ofApp.cpp  ofApp.h  sample.cpp  sample.h  save.cpp  save.h  text.cpp  text.h  util.cpp  util.h
src/assets/: font.ttf.h
